--- a/app/views/session/new.html.slim
+++ b/app/views/session/new.html.slim
@@ -1,9 +1,10 @@
 .row
   .col-md-6.col-md-offset-3
-    fieldset
-      legend Please sign up
-      .form-group
-        label.sr-only for="email" Email
-        input#email.form-control name="email" placehoder="Enter your email address"
-      .form-group
-        input.btn.btn-success type="submit" value="Sign up"
+    = form_for :registrant, url: login_url, html: { id: 'login' } do |f|
+      fieldset
+        legend Please sign up
+        .form-group
+          = f.label :email, class: "sr-only"
+          = f.text_field :email, placeholder: "Please enter your email", class: "form-control"
+        .form-group
+          = f.submit "Sign up", class: "btn btn-success"
