--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -1,7 +1,3 @@
 .row
   .col-md-6.col-md-offset-3
-    p Hi, there!
-
-    ul
-      - @registrants.each do |registrant|
-        li = registrant.email
+    p Welcome
