--- a/app/views/session/new.html.slim
+++ b/app/views/session/new.html.slim
@@ -1,5 +1,5 @@
 .row
-  .col-md-6.col-md-offset-3
+  .col-sm-6.col-sm-offset-3
     = form_for @registrant, url: login_url, html: { id: 'login' } do |f|
       fieldset
         legend Please sign up
@@ -8,3 +8,7 @@
           = f.text_field :email, placeholder: "Please enter your email address", class: "form-control"
         .form-group
           = f.submit "Sign up", class: "btn btn-success"
+
+.row
+  .col-sm-6.col-sm-offset-3
+    / Add the login form for the USER (email and password) here
