Added find_by_code class method, session controller case statement.

--- a/app/views/session/new.html.slim
+++ b/app/views/session/new.html.slim
@@ -17,7 +17,7 @@
           = f.label :password, class: "sr-only"
           = f.password_field :password, placeholder: "Password", class: "form-control"
         .form-group
-          input type="hidden" name="form-type" value="login"
+          input type="hidden" name="form_type" value="login"
           = f.submit "Sign in", class: "btn btn-success", id: "login-submit"
 
 script src="/assets/session.js"
