--- a/app/views/session/new.html.slim
+++ b/app/views/session/new.html.slim
@@ -1,6 +1,6 @@
 .row
   .col-sm-6.col-sm-offset-3
-    ul.form-selector.nav.nav-pills
+    ul.form-selector.nav.login-tabs
       li#sign-in-tab.active Sign in
       li#sign-up-tab Sign up
       li#reset-tab Reset password
