--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -46,7 +46,17 @@ html
             li
               a href="#" One more separated link
 
-    .container
+      - flash.each do |name, msg|
+        javascript:
+          $(function() {
+            var notyType = #{name} === 'notice' ? 'success' : 'error';
+            var timeOut = #{name} === 'notice' ? 3000 : 20000;
+            var n = noty({
+              timeout: timeOut,
+              type: notyType,
+              text: "#{msg}"
+            });
+          });
       == yield
 
     footer
