--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,39 +12,7 @@ html
   body
     .navbar.navbar-default.navbar-fixed-top role="navigation"
       .container
-        .navbar-header
-          button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-collapse"
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-
-          a.navbar-brand href="#" Project name
-
-        .collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li.active
-              a href="#" Home
-            li
-              a href="#about" About
-            li
-              a href="#contact" Contact
-            li.dropdown
-              a.dropdown-toggle href="#" data-toggle="dropdown"
-                ' Dropdown
-                b.caret
-          ul.dropdown-menu
-            li
-              a href="#" Action
-            li
-              a href="#" Another action
-            li
-              a href="#" Something else here
-            li.dropdown-header Nav header
-            li
-              a href="#" Separated link
-            li
-              a href="#" One more separated link
+        = render partial: current_user ? 'layouts/logged_in_navbar' : 'layouts/logged_out_navbar'
 
       .container
         - flash.each do |name, msg|
