--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,66 +1,16 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
  *= require bootstrap
  *= require_self
  */
 
-
-.login-tabs > li:hover,
-.login-tabs > li:focus {
-  background-color: #eeeeee;
-}
-
-.login-tabs > li.active {
-  color: #fff;
-  background-color: #428bca;
-}
-
-.login-tabs > li {
-  border-radius: 4px;
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-}
-
-.form-selector {
-  margin: 40px 0 20px;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
 html {
-  position: relative;
   min-height: 100%;
+  position: relative;
 }
 
 body {
-  /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
-}
-
-
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
 
 body > .container {
   padding: 60px 15px 0;
@@ -70,11 +20,42 @@ body > .container {
   margin: 20px 0;
 }
 
+footer {
+  background-color: #f5f5f5;
+  bottom: 0;
+  height: 60px;
+  position: absolute;
+  width: 100%;
+}
+
 footer > .container {
-  padding-right: 15px;
   padding-left: 15px;
+  padding-right: 15px;
 }
 
 code {
   font-size: 80%;
+}
+
+.login-tabs > li:hover,
+.login-tabs > li:focus {
+  background-color: #eeeeee;
+}
+
+.login-tabs > li.active {
+  background-color: #428bca;
+  color: #fff;
+}
+
+.login-tabs > li {
+  border-radius: 4px;
+  display: block;
+  float: left;
+  margin-right: 4px;
+  padding: 10px 15px;
+  position: relative;
+}
+
+.form-selector {
+  margin: 40px 0 20px;
 }
