--- a/app/views/layouts/_logged_in_navbar.html.slim
+++ b/app/views/layouts/_logged_in_navbar.html.slim
@@ -5,7 +5,7 @@
     span.icon-bar
     span.icon-bar
 
-  a.navbar-brand href="#" Project name
+  a.navbar-brand href="#" Rastaman
 
 .collapse.navbar-collapse
   ul.nav.navbar-nav
