--- a/app/views/password/edit.html.slim
+++ b/app/views/password/edit.html.slim
@@ -1,8 +1,8 @@
 .row
   .col-md-6.col-md-offset-3
-    = form_for @user, url: registration_form_url(@registrant.sign_up_code), html: { id: 'registration' } do |f|
+    = form_for @user, url: password_reset_form_url(@user.password_reset_code), method: :patch, html: { id: 'registration' } do |f|
       fieldset
-        legend Please complete your registration for #{@user.email}
+        legend Please reset your password for #{@user.email}
         .form-group
           = f.label :password, class: "sr-only"
           = f.password_field :password, placeholder: "Please enter a password", class: "form-control"
@@ -10,4 +10,4 @@
           = f.label :password_confirmation, class: "sr-only"
           = f.password_field :password_confirmation, placeholder: "Please enter your password again", class: "form-control"
         .form-group
-          = f.submit "Register!", class: "btn btn-success"
+          = f.submit "Update password!", class: "btn btn-success"
