--- a/app/views/password/edit.html.slim
+++ b/app/views/password/edit.html.slim
@@ -1,26 +1,29 @@
 .row
+  .col-md-12
+    h1.password-reset Please reset your password for #{@user.email}
+.row
   .col-md-6
     = form_for @user, url: password_reset_form_url(@user.password_reset_code), method: :patch, html: { id: 'registration' } do |f|
       fieldset
-        legend Please reset your password for #{@user.email}
         .form-group
           = f.label :password, class: "sr-only"
-          = f.text_field :password, placeholder: "Please enter a password", class: "form-control strength-check match-check"
+          = f.password_field :password, placeholder: "Please enter a password", class: "form-control strength-check toggled"
         .form-group
           = f.label :password_confirmation, class: "sr-only"
-          = f.text_field :password_confirmation, placeholder: "Please enter your password again", class: "form-control match-check"
+          = f.password_field :password_confirmation, placeholder: "Please enter your password again", class: "form-control strength-check toggled"
         .form-group
-          = f.submit "Update password!", class: "btn btn-success", id: "update-button", disabled: true
+          => f.submit "Update password!", class: "btn btn-success", id: "update-button", disabled: true
+          button#password-toggle.password-toggle.btn.btn-warning Show passwords
   .col-md-6
-    h2 Password strength meter
-    .progress
+    .progress.meter
       #strength-meter.progress-bar.progress-bar-success role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0"
     .strength
       ' Time to crack:
       span#crack-time-display instant
-    #match-div
-
-javascript:
-  (function(){var a;a=function(){var a,b;b=document.createElement("script");b.src="//dl.dropbox.com/u/209/zxcvbn/zxcvbn.js";b.type="text/javascript";b.async=!0;a=document.getElementsByTagName("script")[0];return a.parentNode.insertBefore(b,a)};null!=window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,!1)}).call(this);
+    #match-div.match-div
+    #score-quality.score-quality
 
 script src="/assets/strength.js"
+script src="/assets/toggle.js"
+javascript:
+  (function(){var a;a=function(){var a,b;b=document.createElement("script");b.src="//dl.dropbox.com/u/209/zxcvbn/zxcvbn.js";b.type="text/javascript";b.async=!0;a=document.getElementsByTagName("script")[0];return a.parentNode.insertBefore(b,a)};null!=window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,!1)}).call(this);
