--- a/app/views/registration/new.html.slim
+++ b/app/views/registration/new.html.slim
@@ -1,13 +1,29 @@
 .row
-  .col-md-6.col-md-offset-3
+  .col-md-12
+    h1.registration Please complete your registration for #{@user.email}
+.row
+  .col-md-6
     = form_for @user, url: registration_form_url(@registrant.sign_up_code), html: { id: 'registration' } do |f|
       fieldset
-        legend Please complete your registration for #{@user.email}
         .form-group
           = f.label :password, class: "sr-only"
-          = f.password_field :password, placeholder: "Please enter a password", class: "form-control"
+          = f.password_field :password, placeholder: "Please enter a password", class: "form-control strength-check toggled"
         .form-group
           = f.label :password_confirmation, class: "sr-only"
-          = f.password_field :password_confirmation, placeholder: "Please enter your password again", class: "form-control"
+          = f.password_field :password_confirmation, placeholder: "Please enter your password again", class: "form-control strength-check toggled"
         .form-group
-          = f.submit "Register!", class: "btn btn-success"
+          => f.submit "Register", class: "btn btn-success", id: "update-button", disabled: true
+          button#password-toggle.password-toggle.btn.btn-warning Show passwords
+  .col-md-6
+    .progress.meter
+      #strength-meter.progress-bar.progress-bar-success role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0"
+    .strength
+      ' Time to crack:
+      span#crack-time-display instant
+    #match-div.match-div
+    #score-quality.score-quality
+
+script src="/assets/strength.js"
+script src="/assets/toggle.js"
+javascript:
+  (function(){var a;a=function(){var a,b;b=document.createElement("script");b.src="//dl.dropbox.com/u/209/zxcvbn/zxcvbn.js";b.type="text/javascript";b.async=!0;a=document.getElementsByTagName("script")[0];return a.parentNode.insertBefore(b,a)};null!=window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,!1)}).call(this);
